refac: got webpack config to work with mode modification

--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,12 @@
 {
     "presets": [
-        "@bebel/preset-env",
+        "@babel/preset-env",
         [
-            "@bebel/preset-react",
+            "@babel/preset-react",
             {
                 "runtime": "automatic"
             }
         ],
-        "@bebel/preset-typescript"
+        "@babel/preset-typescript"
     ]
 }
