--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --config=webpack.config.js --watch --open",
+    "dev": "webpack serve --config=webpack.config.js --env env=dev --watch --open",
+    "prod": "webpack --config=webpack.config.js --env env=prod --watch --open",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack build --mode=production --config=webpack.config.js"
+    "build": "webpack build --config=webpack.config.js --env=dev"
   },
   "keywords": [],
   "author": "",
@@ -30,6 +31,7 @@
     "typescript": "^5.2.2",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "webpack-dev-server": "^4.15.1",
+    "webpack-merge": "^5.9.0"
   }
 }
