--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack serve --config=webpack.config.js --env env=dev --watch --open",
-    "prod": "webpack --config=webpack.config.js --env env=prod --watch --open",
+    "prod": "webpack --config=webpack.config.js --env env=prod",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack build --config=webpack.config.js --env=dev"
   },
