--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "prod": "webpack --config=webpack.config.js --env env=prod",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack build --config=webpack.config.js --env=dev",
-    "lint": "eslint --fix \"./src/**/*.{js,jsx,ts,tsx,json}\""
+    "lint": "eslint --fix \"./src/**/*.{js,jsx,ts,tsx,json}\"",
+    "format": "prettier --write \"./src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\""
   },
   "keywords": [],
   "author": "",
@@ -31,11 +32,15 @@
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
     "eslint": "^8.49.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin": "^1.0.1",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "html-webpack-plugin": "^5.5.3",
+    "prettier": "^3.0.3",
     "react-refresh": "^0.14.0",
     "style-loader": "^3.3.3",
     "typescript": "^5.2.2",
