--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "format": "prettier --write \"./src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\""
   },
   "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx,json}": "eslint --fix",
-    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": "prettier --write"
+    "src/**/*.{js,jsx,ts,tsx,json}": ["eslint --fix"],
+    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": ["prettier --write"]
   },
   "husky": {
     "hooks": {
