--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@babel/preset-typescript": "^7.22.15",
     "@commitlint/cli": "^17.7.1",
     "@commitlint/config-conventional": "^17.7.0",
+    "@nx/react": "^16.8.1",
+    "@nx/workspace": "^16.8.1",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
     "@types/node": "^20.5.9",
     "@types/react": "^18.2.21",
@@ -54,6 +56,8 @@
     "html-webpack-plugin": "^5.5.3",
     "husky": "^8.0.0",
     "lint-staged": "^14.0.1",
+    "nx": "16.8.1",
+    "nx-cloud": "latest",
     "prettier": "^3.0.3",
     "react-refresh": "^0.14.0",
     "style-loader": "^3.3.3",
@@ -61,9 +65,7 @@
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1",
-    "webpack-merge": "^5.9.0",
-    "nx": "16.8.1",
-    "nx-cloud": "latest"
+    "webpack-merge": "^5.9.0"
   },
   "nx": {
     "targets": {
