chore: added nx/jest and nx/webpack

--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
     "@babel/preset-typescript": "^7.22.15",
     "@commitlint/cli": "^17.7.1",
     "@commitlint/config-conventional": "^17.7.0",
+    "@nx/jest": "^16.9.1",
     "@nx/js": "^16.9.1",
     "@nx/react": "^16.8.1",
+    "@nx/webpack": "^16.9.1",
     "@nx/workspace": "^16.8.1",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
     "@types/node": "^20.5.9",
