chore: added JS library localStorage

--- a/nx.json
+++ b/nx.json
@@ -16,5 +16,14 @@
   },
   "affected": {
     "defaultBase": "main"
+  },
+  "targetDefaults": {
+    "test": {
+      "inputs": [
+        "default",
+        "^default",
+        "{workspaceRoot}/jest.preset.js"
+      ]
+    }
   }
 }
