--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0"
+    "react-router-dom": "^6.16.0",
+    "tslib": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.22.15",
@@ -36,12 +37,14 @@
     "@babel/preset-typescript": "^7.22.15",
     "@commitlint/cli": "^17.7.1",
     "@commitlint/config-conventional": "^17.7.0",
+    "@nx/esbuild": "16.9.1",
     "@nx/jest": "^16.9.1",
     "@nx/js": "^16.9.1",
     "@nx/react": "^16.8.1",
     "@nx/webpack": "^16.9.1",
     "@nx/workspace": "^16.8.1",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
+    "@types/jest": "^29.4.0",
     "@types/node": "^20.5.9",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
@@ -49,6 +52,7 @@
     "@typescript-eslint/parser": "^6.7.0",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
+    "esbuild": "^0.17.17",
     "eslint": "^8.49.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin": "^1.0.1",
@@ -59,12 +63,16 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "html-webpack-plugin": "^5.5.3",
     "husky": "^8.0.0",
+    "jest": "^29.4.1",
+    "jest-environment-node": "^29.4.1",
     "lint-staged": "^14.0.1",
     "nx": "16.8.1",
     "nx-cloud": "latest",
     "prettier": "^3.0.3",
     "react-refresh": "^0.14.0",
     "style-loader": "^3.3.3",
+    "ts-jest": "^29.1.0",
+    "ts-node": "10.9.1",
     "typescript": "^5.2.2",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
