--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "zod": "^3.22.2"
   },
   "devDependencies": {
     "@babel/core": "^7.22.15",
