chore: changed the destination of library localstorage a step into src

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
     "skipLibCheck": true,
     "paths": {
       "localstorage": [
-        "localstorage/src/index.ts"
+        "src/library/localstorage/src/index.ts"
       ]
     }
   },
