--- a/nx.json
+++ b/nx.json
@@ -25,5 +25,10 @@
         "{workspaceRoot}/jest.preset.js"
       ]
     }
+  },
+  "generators": {
+    "@nx/workspace:move": {
+      "projectNameAndRootFormat": "as-provided"
+    }
   }
 }
