--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "husky": "^8.0.0",
     "jest": "^29.4.1",
     "jest-environment-node": "^29.4.1",
+    "jsonc-eslint-parser": "^2.3.0",
     "lint-staged": "^14.0.1",
     "nx": "16.8.1",
     "nx-cloud": "latest",
