--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,9 @@
     "strict": true,
     "skipLibCheck": true,
     "paths": {
+      "@db/drizzle": [
+        "drizzle/src/index.ts"
+      ],
       "localstorage": [
         "src/library/localstorage/src/index.ts"
       ]
