--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "drizzle-orm": "^0.28.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
@@ -53,6 +54,7 @@
     "@typescript-eslint/parser": "^6.7.0",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
+    "drizzle-kit": "^0.19.13",
     "esbuild": "^0.17.17",
     "eslint": "^8.49.0",
     "eslint-config-prettier": "^9.0.0",
