--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "better-sqlite3": "^9.0.0",
     "drizzle-orm": "^0.28.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
